Added mathjax example and template fix

--- a/htdocs/00.start.md
+++ b/htdocs/00.start.md
@@ -14,8 +14,11 @@ dog's back.
 
 ### Header 3
 
+One can even write math: $\int^1_0{x\,dx}$
+
 > This is a blockquote.
 >
 > This is the second paragraph in the blockquote.
 >
 > ## This is an H2 in a blockquote
+
